--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body class="container">
-  <pm-root></pm-root>
+  <sw-root></sw-root>
 </body>
 </html>
